PopupTool: Fix popup z-index override
Follow-up to f11c7faa2a1034e4ab455047e59e1ed1a82a9f97.

Bug: T222427

--- a/src/styles/tools/PopupTool.less
+++ b/src/styles/tools/PopupTool.less
@@ -2,8 +2,7 @@
 
 .oo-ui-popupTool {
 	&-popup {
-		.oo-ui-popupWidget-popup,
-		.oo-ui-popupWidget-anchor {
+		&.oo-ui-popupWidget {
 			z-index: 4;
 		}
 	}
